LEPL-29: refactor pom.xml